--- a/driverfeature/build.gradle
+++ b/driverfeature/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':networking')
+    implementation 'com.google.android.gms:play-services-ads:18.2.0'
 }
