--- a/driverfeature/build.gradle
+++ b/driverfeature/build.gradle
@@ -35,5 +35,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation project(path: ':networking')
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
