--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
@@ -44,5 +44,6 @@ dependencies {
     implementation project(path: ':driverfeature')
     implementation project(path: ':ownerfeature')
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation project(path: ':networking')
 
 }
