--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     implementation project(path: ':ownerfeature')
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation project(path: ':networking')
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
 }
