--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,22 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".ui.Activites.SignUpActivity" />
+        >
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme"
+            android:label=""
+            ></activity>
+        <activity android:name=".ui.Activites.SignUpActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+
+            />
         <activity
             android:name=".ui.Activites.LoginActivity"
-            android:label="@string/app_name">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
