--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
-
+    <!-- To access Google+ APIs: -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        >
-        <activity android:name=".MainActivity"
-            android:theme="@style/AppTheme"
-            android:label=""
-            ></activity>
-        <activity android:name=".ui.Activites.SignUpActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/AppTheme">
 
-            />
+        <activity android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
+
+        </activity>
+        <activity
+            android:name=".ui.Activites.SignUpActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
             android:name=".ui.Activites.LoginActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
