--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.github.satyan:sugar:1.5'
     implementation 'com.google.android.gms:play-services-plus:17.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -49,6 +50,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha01'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.android.support:recyclerview-v7:29.0.0'
+    implementation 'com.android.support:cardview-v7:29.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0' // Glide
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0' // Glide
+
 
 
 }
